--- a/parcial/frontend/index.html
+++ b/parcial/frontend/index.html
@@ -1,15 +1,29 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CrudDATABASE Frontend</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Mi Videoteca — Admin</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <div id="app">
-        <!-- Aquí se renderizarán las vistas -->
+  <header class="site-header">
+    <div class="container">
+      <h1 class="brand">🎬 Mi Videoteca</h1>
+      <p class="tagline">Administra tus películas — CRUD completo</p>
     </div>
-    <script src="main.js"></script>
+  </header>
+
+  <main class="container" id="app">
+    <!-- El contenido se renderiza desde main.js -->
+  </main>
+
+  <footer class="site-footer">
+    <div class="container">
+      <small>© Mi Videoteca</small>
+    </div>
+  </footer>
+
+  <script src="main.js"></script>
 </body>
 </html>
